kubernetes/apps/affine/affine.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: affine
  namespace: affine
spec:
  replicas: 1
  selector:
    matchLabels:
      app: affine
  template:
    metadata:
      labels:
        app: affine
    spec:
      containers:
        - name: affine
          image: ghcr.io/toeverything/affine-graphql:stable
          ports:
            - containerPort: 3010
          volumeMounts:
            - name: config
              mountPath: /root/.affine/config
            - name: storage
              mountPath: /root/.affine/storage
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: affine-config
        - name: storage
          persistentVolumeClaim:
            claimName: affine-storage
---
apiVersion: v1
kind: Service
metadata:
  name: affine
  namespace: affine
spec:
  selector:
    app: affine
  ports:
    - port: 3010
