kubernetes/apps/affine/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: affine
  namespace: affine
  annotations:
    tailscale.com/funnel: "false"
spec:
  ingressClassName: tailscale
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: affine
                port:
                  number: 3010
  tls:
    - hosts:
        - affine
